# mike

./: CMakeLists.txt  chunk.c  chunk.h  cube.h  main.c  player.c  player.h  shader.c  shader.h  texture.c  texture.h
resources/shaders/: test.frag  test.vert
